force-app/main/default/objects/TW1_Category__c/TW1_Category__c.object-meta.xml
<CustomObject>
    <label>Category</label>
    <nameField>
        <displayFormat>CT{000000}</displayFormat>
        <label>Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>