force-app/main/default/objects/TW1_Category__c/fields/NationalExclusiveCategorySEN__c.field-meta.xml
<CustomField>
    <fullName>NationalExclusiveCategorySEN__c</fullName>
    <label>National Exclusive Category – SEN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Regime</fullName>
            </value>
            <value>
                <fullName>Mixed Regime</fullName>
            </value>
            <value>
                <fullName>Non-Exclusive Regime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>