force-app/main/default/objects/TW1_Category__c/fields/TW1_Category__c.field-meta.xml
<CustomField>
    <fullName>TW1_Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>