force-app/main/default/objects/TW1_Category__c/fields/TW1_Category_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>TW1_Category_Salesforce_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Salesforce Id</label>
    <type>Text</type>
</CustomField>