force-app/main/default/objects/TW1_Category__c/fields/TW1_Code__c.field-meta.xml
<CustomField>
    <fullName>TW1_Code__c</fullName>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>