force-app/main/default/objects/TW1_Category__c/fields/TW1_Country__c.field-meta.xml
<CustomField>
    <fullName>TW1_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>