force-app/main/default/objects/TW1_Category__c/fields/TW1_NBS__c.field-meta.xml
<CustomField>
    <fullName>TW1_NBS__c</fullName>
    <label>NBS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>