force-app/main/default/objects/TW1_Category__c/fields/TW1_Scope__c.field-meta.xml
<CustomField>
    <fullName>TW1_Scope__c</fullName>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>