force-app/main/default/objects/TW1_Category__c/fields/TW3_Category_FR__c.field-meta.xml
<CustomField>
    <fullName>TW3_Category_FR__c</fullName>
    <label>Category (FR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>