force-app/main/default/objects/TW1_Category__c/fields/TW3_Scope_FR__c.field-meta.xml
<CustomField>
    <fullName>TW3_Scope_FR__c</fullName>
    <label>Scope (FR)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>