force-app/main/default/objects/TW1_Category__c/fields/UNSPSC__c.field-meta.xml
<CustomField>
    <fullName>UNSPSC__c</fullName>
    <label>UNSPSC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>