force-app/main/default/objects/TW1_Category__c/recordTypes/TW1_Material.recordType-meta.xml
<RecordType>
    <fullName>TW1_Material</fullName>
    <active>true</active>
    <label>Material</label>
</RecordType>