force-app/main/default/objects/TW1_Category__c/recordTypes/TW1_Service.recordType-meta.xml
<RecordType>
    <fullName>TW1_Service</fullName>
    <active>true</active>
    <label>Service</label>
</RecordType>