force-app/main/default/objects/TW1_Category__c/listViews/Material.listView-meta.xml
<ListView>
    <fullName>Material</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>TW1_Code__c</columns>
    <columns>TW1_Category__c</columns>
    <columns>TW1_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TW1_Category__c.TW1_Material</value>
    </filters>
    <label>Material</label>
</ListView>